cleanup add-reads-options